--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,246 @@
-body {
+/* Reset */
+:root {
+  --blanco: #ffffff;
+  --negro: #000000;
+  --headingFont:'PT Sans', sans-serif;
+  --textFont:  'Roboto', sans-serif;
+}
+html{
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+*, *:before, *:after{
+  box-sizing: inherit;
+}
+body{
+  font-size: 18px;
+  font-size: 1.8rem;
+  line-height: 1.5;
+  font-family: 'PT Sans', sans-serif;
+}
+h1, h2, h3{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  line-height: 1.5;
+}
+h1, h2{
+  font-family: 'Roboto', serif;
+  text-align: center;
+}
+h1 {
+  font-size: 3rem;
+}
+h2 {
+  font-size: 2.4rem;
+}
+h3{
+  font-family: 'PT Sans', sans-serif;
+}
+ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+a {
+  text-decoration: none;
+  color: var(--blanco);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Header */
+.container{
+  background-color: rgb(44,62,80);
+  padding: 1rem;
+}
+.navbar{
+  max-width: 1200px;
+  margin: 0 auto;
+}
+@media (min-width: 768px){
+  .navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+.navbar__encabezado{
+  color: #FFF;
+  text-align: center;
+  text-decoration: none;
+}
+.navegacion a{
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 1;
+  font-family: 'PT Sans', sans-serif;
+  padding: 1rem;
+  margin-right: 1rem;
+  text-decoration: none;
+}
+.navegacion a:last-of-type{
+  margin-right: 0;
+}
+.pagina-actual{
+  border-bottom: 2px solid #FFF;
+}
+
+/* Footer */
+.copyrigth{
+  text-align: center;
+  background-color: rgb(33,44,55);
+  color: #FFF;
+  margin: 0;
+  padding: 1rem;
+}
+
+/* General */
+.titulo{
+  margin: 4rem auto;
+}
+
+/* Home */
+.producto__detalle{
+  display: flex;
+  justify-content: space-between;
+  width: 900px;
+  border-bottom: 1px solid #e1e1e1;
+  margin: 0 auto 20px auto;
+}
+.producto__detalle img,
+.producto__detalle div{
+  width: 45rem;
+  max-width: 100%;
+  padding: 2rem;
+}
+.producto__detalle-btn{
+  width: 300px;
+  display: block;
+  margin: 20px auto 0 auto;
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 10;
+  border-color: #497cff;
+  color: #497cff
+}
+.producto__precio{
+  text-align: center;
+  margin: 0 auto;
+  font-size: 20px;
+  font-weight: 700;
+  margin-top: 15px;
+  border: 1px solid #DA5572;
+  background-color: #F44611;
+  color: #FFF;
+  width: 150px
+}  
+.producto__descripcion{
+  text-align: center;
+  font-size: 16px;
+}
+.producto__titulo {
+  font-size: 20px;
+  font-weight: 700;;
+  text-align: center;;
+  text-transform: uppercase;
+}
+.producto__boton{
+  display: block;
+  font-size: 20px;
+  font-weight: 700;
+  text-align: center;
+  margin: 15px auto;
+  border: 1px solid #DA5572;
+  background-color: #F44611;
+  color: #FFF;
+  border-radius: 10;
+  width: 200px;
+  text-transform: uppercase;
+  padding: 10px
+}
+.producto__comprar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 400px;
+  margin: 0 auto;
+}
+.producto__contador{
+  display: flex;
+}
+.producto__contador-contador{
+  display: flex;
+  justify-content: space-between;
+  width: 100px;
+  align-items: center;
+}
+.producto__contador-contador button{
+  background-color: #FFF;
+  border: none;
+  color: #497cff;
+  font-size: 30px;
+}
+.producto__contador-btn{
+  width: 190px;
+  display: block;
+  margin: 2rem;
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 10rem;
+  border-color: #497cff;
+  color: #497cff;
+}
+
+/* Spinner */
+.sk-chase {
+  width: 40px;
+  height: 40px;
+  position: relative;
+  animation: sk-chase 2.5s infinite linear both;
+  margin: 250px auto;
+}
+
+.sk-chase-dot {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0; 
+  animation: sk-chase-dot 2.0s infinite ease-in-out both; 
+}
+
+.sk-chase-dot:before {
+  content: '';
+  display: block;
+  width: 25%;
+  height: 25%;
+  background-color: #000;
+  border-radius: 100%;
+  animation: sk-chase-dot-before 2.0s infinite ease-in-out both; 
+}
+
+.sk-chase-dot:nth-child(1) { animation-delay: -1.1s; }
+.sk-chase-dot:nth-child(2) { animation-delay: -1.0s; }
+.sk-chase-dot:nth-child(3) { animation-delay: -0.9s; }
+.sk-chase-dot:nth-child(4) { animation-delay: -0.8s; }
+.sk-chase-dot:nth-child(5) { animation-delay: -0.7s; }
+.sk-chase-dot:nth-child(6) { animation-delay: -0.6s; }
+.sk-chase-dot:nth-child(1):before { animation-delay: -1.1s; }
+.sk-chase-dot:nth-child(2):before { animation-delay: -1.0s; }
+.sk-chase-dot:nth-child(3):before { animation-delay: -0.9s; }
+.sk-chase-dot:nth-child(4):before { animation-delay: -0.8s; }
+.sk-chase-dot:nth-child(5):before { animation-delay: -0.7s; }
+.sk-chase-dot:nth-child(6):before { animation-delay: -0.6s; }
+
+@keyframes sk-chase {
+  100% { transform: rotate(360deg); } 
+}
+
+@keyframes sk-chase-dot {
+  80%, 100% { transform: rotate(360deg); } 
+}
+
+@keyframes sk-chase-dot-before {
+  50% {
+    transform: scale(0.4); 
+  } 100%, 0% {
+    transform: scale(1.0); 
+  } 
 }
