--- a/src/index.css
+++ b/src/index.css
@@ -29,13 +29,21 @@ h1, h2{
   text-align: center;
 }
 h1 {
-  font-size: 3rem;
+  font-size: 2rem;
 }
 h2 {
-  font-size: 2.4rem;
+  font-size: 1.8rem;
 }
 h3{
   font-family: 'PT Sans', sans-serif;
+}
+@media(min-width: 768px){
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 2.4rem;
+  }
 }
 ul{
   list-style: none;
@@ -59,8 +67,19 @@ div#root{
   padding: 1rem;
 }
 .container{
-  max-width: 1200px;
+  max-width: 95%;
   margin: 0 auto;
+}
+@media(min-width: 768px){
+  .container{
+    max-width: 1200px;
+  }
+}
+.container__footer .menu{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 2rem;
 }
 @media (min-width: 768px){
   .container__header,
@@ -141,36 +160,41 @@ div#root{
 .menu li a:hover{
   color: var(--botonPrimario);
 }
-.submenu{
-  position: absolute;
-  background-color: #2c3e50;
-  visibility: hidden;
-  opacity: 0;
-  transition: opacity 1.5s;
-  width: 15rem;
-  margin-top: 1rem;
-  padding: 2rem;
-  border-bottom-left-radius: 5rem;
-  border-bottom-right-radius: 5rem;
+
+.menu__hamburger svg{
+  font-size: 4rem;
 }
-.submenu li a{
-  display: block;
+.menu__hamburger .bm-menu-wrap{
+  background-color: rgb(44,62,80);
+}
+.bm-menu .bm-item{
+  text-align: left;
+  margin-bottom: 4rem;
+  outline: none;
+  padding-left: 2rem;
+}
+.bm-menu .bm-item:first-child{
+  padding-top: 2rem;
+}
+.bm-menu .bm-item button{
+  background-color: transparent;
+  text-align: left;
+  border: none;
   color: #FFF;
-  padding: 1rem;
+  font-size: 1.5rem;
 }
-.submenu li a:hover{
-  border-bottom: 1px solid #FFF;
-  color: var(--botonPrimario);
-}
-.menu li:hover .submenu{
-  visibility: visible;
-  opacity: 1;
+.bm-menu .bm-item button:hover{
+  border: 1px solid var(--botonPrimario);
+  background-color: white;
+  color: var(--botonPrimario);;
+  padding: 1rem 1.5rem;
+  border-radius: 5rem;
 }
 
 /* Footer */
 .copyrigth{
   text-align: center;
-  background-color: rgb(33,44,55);
+  background-color: #212c37;
   color: #FFF;
   margin: 0;
   padding: 1rem;
@@ -179,6 +203,11 @@ div#root{
 /* General */
 .titulo{
   margin: 4rem auto;
+}
+@media (min-width: 768px) {
+  .titulo{
+    margin: 2rem auto;
+  }
 }
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
@@ -236,36 +265,64 @@ input[type=number]::-webkit-outer-spin-button {
 
 /* Home */
 .products__containter{
-  width: 120rem;
-  margin: 3rem auto 5rem auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
   align-items: center;
-  row-gap: 4rem;
+}
+@media(min-width: 768px){
+  .products__containter{
+    width: 120rem;
+    margin: 3rem auto 5rem auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    row-gap: 4rem;
+  }
 }
 .producto__detalle{
-  flex-basis: calc(33.3% - 3rem);
+  flex-basis: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-right: 1px solid #e1e1e1;
   padding-right: 2rem;
   height: 15rem;
+  border-bottom: 1px solid #e1e1e1;
+  margin-bottom: 1.5rem;
 }
-.producto__detalle:nth-child(3),
-.producto__detalle:nth-child(6),
-.producto__detalle:nth-child(9),
-.producto__detalle:last-of-type{
-  border-right: none;
+@media(min-width: 768px){
+  .producto__detalle{
+    border: none;
+    flex-basis: calc(33.3% - 3rem);
+    border-right: 1px solid #e1e1e1;
+    padding-right: 2rem;
+    height: 15rem;
+    margin-bottom: 0;
+  }
+}
+@media(min-width: 768px){
+  .producto__detalle:nth-child(3),
+  .producto__detalle:nth-child(6),
+  .producto__detalle:nth-child(9),
+  .producto__detalle:last-of-type{
+    border-right: none;
+  }
 }
 .producto__detalle img{
   width: 16rem;
   max-width: 100%;
   flex-basis: calc(50% - 4rem);
+  padding: 2.5rem;
+  margin-bottom: 1rem;
+}
+@media (min-width: 768px) {
+  .producto__detalle img{
+    padding: 0 1rem 0 0;
+  }
 }
 .producto__info{
-  flex-basis: calc(50% - 1rem);
+  flex: 1;
 }
 .producto__detalle-btn{
   background-color: #fff;
@@ -395,31 +452,13 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 /* Cart */
-.icon-cart{
-  font-size: 3rem!important;
-}
 .icon-cart__products{
   display: block;
 }
 .icon-cart__products:hover{
   display: block;
 }
-.carrito{
-  display: flex;
-  position: relative;
-  padding: 1rem;
-}
-.carrito .carrito-icon{
-  margin: 0;
-  position: absolute;
-  bottom: -1rem;
-  left: 2.5rem;
-  border-radius: 50%;
-  background-color: red;
-  width: 2rem;
-  text-align: center;
-  font-size: 1.5rem;
-}
+
 .cart__total{
   display: flex;
   justify-content: center;
@@ -461,9 +500,9 @@ input[type=number]::-webkit-outer-spin-button {
 }
 .cart__resumen{
   position: absolute;
-  background-color: rgb(44,62,80);
+  background-color: #212c37;
   transition: opacity 1.5s;
-  top: 63px;
+  top: 47px;
   left: -11rem;
   visibility: hidden;
   opacity: 0;
@@ -480,10 +519,7 @@ input[type=number]::-webkit-outer-spin-button {
 .cart__resumen-container p{
   margin: .5rem;
 }
-.carrito:hover ul{
-  visibility: visible;
-  opacity: 1;
-}
+
 .cart__resumen-name{
   flex-basis: 17rem;
 }
@@ -517,23 +553,31 @@ input[type=number]::-webkit-outer-spin-button {
   color: #FFF;
   background-color: #497cff;
 }
-.cart__list{
-  width: 60rem;
-  margin: 0 auto;
-}
+
 .cart__list .producto__detalle{
   border: none;
   padding: 0;
   margin-bottom: 2rem;
   border-bottom: 1px solid #e1e1e1;
 }
+@media (min-width: 768px) {
+  .cart__list .producto__detalle{
+    margin-bottom: 4rem;
+  }
+}
 .cart__list .producto__detalle:last-of-type{
   border: none;
 }
 .cart__list .producto__detalle img{
   flex-basis: 15rem;
-  margin-right: 2rem;
-  padding-bottom: 1rem;
+  margin: 0;
+  padding: 2rem;
+}
+@media (min-width: 768px) {
+  .cart__list .producto__detalle img{
+    margin-right: 2rem;
+    padding: 0 0 1rem 0;
+  } 
 }
 .cart__list .producto__detalle .producto__info{
   flex: 1;
@@ -623,9 +667,6 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 2rem;
   padding: 2rem;
 }
-.formulario.formulario__products label{
-  flex-basis: 10rem;
-}
 .formulario__image{
   display: flex;
   flex-direction: column;
@@ -699,19 +740,8 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 /* Detalle Producto */
-.product__detail {
-  width: 90rem;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
 .product__detail .producto__detalle{
   height: 30rem;
-}
-.product__detail .producto__detalle img{
-  width: 35rem;
 }
 .product__detail .producto__titulo{
   margin: 1rem;
@@ -726,14 +756,25 @@ input[type=number]::-webkit-outer-spin-button {
   align-items: center;
 }
 .product__detail .producto__data .producto__precio{
-  font-size: 3rem;
+  width: auto;
+  font-size: 1.5rem;
+  padding: 1rem 2rem;
+}
+@media (min-width: 768px) {
+  .product__detail .producto__data .producto__precio{
+    font-size: 3rem;
+    padding: 1rem 2rem;
+  }
+}    
+.product__detail .producto__data .producto__detalle-btn{
+  font-size: 1.5rem;
   padding: 1rem 2rem;
   width: auto;
 }
-.product__detail .producto__data .producto__detalle-btn{
-  font-size: 2rem;
-  padding: 1rem 2rem;
-  width: auto;
+@media (min-width: 768px) {
+  .product__detail .producto__data .producto__detalle-btn{
+    font-size: 2rem;
+  }
 }
 .product__detail .producto__data-iconos{
   display: flex;
@@ -855,11 +896,16 @@ input[type=number]::-webkit-outer-spin-button {
   background-image: url(images/contact.jpg);
   background-position: center center;
   background-size: cover;
-  height: 63rem;
+  height: 68rem;
 }
 .contact__container{
-  width: 60rem;
+  width: 95%;
   margin: 0 auto;
+}
+@media (min-width: 768px) {
+  .contact__container{
+    width: 60rem;
+  }
 }
 .contact__titulo{
   margin: 0;
